# Akrion

./: .env.example  .gitignore  CMakeLists.txt  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md
cmake/: QtAgentSafe.cmake
examples/: akrion.config.json  serial-frame.ndjson  serial_frame_example.c
examples/components/cpp/: pid_component.c
include/akrion/: component.h  component.hpp
qml/: Main.qml  MetricTile.qml  WaveformPanel.qml
schemas/: config.schema.json  event.schema.json  manifest.schema.json  run.schema.json  serial-frame.schema.json  summary.schema.json
scripts/: build.ps1  run.ps1
sdk/rust/akrion-component/: Cargo.toml  README.md
sdk/rust/akrion-component/src/: lib.rs
src/: main.cpp
src/cli/: main.cpp
src/core/: builtin_components.cpp  builtin_components.h  capture_session.cpp  capture_session.h  component_pipeline.cpp  component_pipeline.h  component_registry.cpp  component_registry.h  data_source.cpp  data_source.h  frame_decoder.cpp  frame_decoder.h  frame_validator.cpp  frame_validator.h  run_storage.cpp  run_storage.h  statistics.cpp  statistics.h  types.cpp  types.h
src/gui/: appcontroller.cpp  appcontroller.h  waveformbuffer.cpp  waveformbuffer.h  waveformcontroller.cpp  waveformcontroller.h  waveformview.cpp  waveformview.h
src/package/: runpackage.cpp  runpackage.h
tests/: component_c_abi_tests.c  component_tests.cpp  core_tests.cpp  runpackage_tests.cpp  test_protocol.py  test_tooling.py  waveform_tests.cpp
tools/: qt.ps1
